Fix Swagger Docs
